--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "openai": "^4.82.0"
+    "lowdb": "^7.0.1",
+    "openai": "^4.82.0",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@types/bun": "^1.2.2",
