--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "express": "^4.21.2",
     "lowdb": "^7.0.1",
     "openai": "^4.82.0",
-    "uuid": "^11.0.5"
+    "ora": "^8.2.0",
+    "uuid": "^11.0.5",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/bun": "^1.2.2",
