--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "lowdb": "^7.0.1",
+    "node-fetch": "^3.3.2",
     "openai": "^4.82.0",
     "ora": "^8.2.0",
     "uuid": "^11.0.5",
